--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=ecommerce
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+
+spring.datasource.username=user
+spring.datasource.password=user
+
+spring.jpa.hibernate.ddl-auto=update
