--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,48 @@
 spring.application.name=ecommerce
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:test
+# H2DATABASE CONFIGURATIONS
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:test
 
-spring.datasource.username=user
-spring.datasource.password=user
+
+# POSTGRESQL CONFIGURATIONS
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
+spring.datasource.password=Aa1234!@
 
 spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+
+# SQL CONFIGURATIONS !!!
+# spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+# spring.datasource.username=root
+# spring.datasource.password=Aa1234!@
+
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+
+project.image=images/
+
+# spring.jpa.show-sql=true 
+# spring.jpa.properties.hibernate.format_sql=true
+
+spring.app.jwtSecret=aBcDeFgHiJkLmNoPqRsTuVwXyZaBcDeFgHiJkLmNoPqRsTuVwXyZaBcD==
+spring.app.jwtExpirations=300000000
+spring.app.jwtCookieName=springboot-ecommerce
+
+# logging.level.org.springframework=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.springframework.security=DEBUG
+# logging.level.com.samnart.ecommerce=DEBUG
+
+spring.security.user.name=admin
+spring.security.user.password=demo@123
+
+frontend.url=http://localhost:5173/
+
+image.base.url=http://localhost:8080/images
