--- a/ecommerce-api/src/main/resources/application.properties
+++ b/ecommerce-api/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.application.name=ecommerce
 
 
 # POSTGRESQL CONFIGURATIONS
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://ecommerce.ct480mg8kku3.eu-north-1.rds.amazonaws.com:5432/ecommerce
 spring.datasource.username=postgres
-spring.datasource.password=Aa1234!@
+spring.datasource.password=M9x!t2#LqZ
 
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create-drop
@@ -46,3 +46,6 @@ spring.security.user.password=demo@123
 frontend.url=http://localhost:5173/
 
 image.base.url=http://localhost:8080/images
+
+# needed if using elastic beanstalk
+server.port=5000
